# Abstract

./: Abstract.cabal  README.md  sources.txt
examples/: counter.hs  queue.hs  stack.hs
src/: Abstract.hs
src/Abstract/: Counter.hs  Queue.hs  Tools.hs  Wrapper.hs
src/Abstract/Counter/: Dec.hs  Get.hs  Inc.hs
src/Abstract/Queue/: Deq.hs  Enq.hs
