name:                   Abstract
version:                0.0.2
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.8
build-type:             Simple

author:                 Andrew Darqui <andrew.darqui@gmail.com>
maintainer:             Andrew Darqui <andrew.darqui@gmail.com>
homepage:               github.com/adarqui/Abstract

category:               Experimental
synopsis:               Abstract

Library
 hs-source-dirs:        src
 exposed-modules:       Abstract
                        Abstract.Tools
                        Abstract.Wrapper
                        Abstract.Queue
                        Abstract.Queue.Deq
                        Abstract.Queue.Enq
                        Abstract.Counter
                        Abstract.Counter.Get
                        Abstract.Counter.Inc
                        Abstract.Counter.Dec
 build-depends:         base >= 3 && <5, bytestring, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache, DevUtils-Base, DevUtils-Parser, DevUtils-Redis
 ghc-options:           -Wall -rtsopts
